# moseq2-model

./: .gitignore  .pdm-python  pyproject.toml  setup.py
moseq2_model/: cli.py  gui.py  util.py
moseq2_model/helpers/: data.py  wrappers.py
moseq2_model/train/: models.py  util.py
tests/integration_tests/: test_cli.py  test_data_helper.py  test_gui.py
tests/unit_tests/: test_train_models.py  test_train_utils.py  test_util.py
