[tool.pdm]

[project]
name = "moseq2_model"
version = "1.2.0"
description = "Modeling for the best"
readme = "README.md"
authors = [
    {name = "Datta Lab"},
]
requires-python = ">=3.9"
dependencies = [
    "autoregressive @ git+https://github.com/sneakers-the-rat/pyhsmm-autoregressive.git@packaging",
    "click>=7.0",
    "cython>=0.29.14",
    "cytoolz>=0.10.1",
    "future>=0.18.2",
    "h5py>=2.10.0",
    "joblib>=0.15.1",
    "matplotlib>=3.1.2",
    "numpy>=1.18.3",
    "opencv-python>=4.1.2.30",
    "pandas>=1.0.5",
    "pybasicbayes @ git+https://github.com/sneakers-the-rat/pybasicbayes.git@packaging",
    "pyhsmm @ git+https://github.com/sneakers-the-rat/pyhsmm.git@packaging",
    "ruamel.yaml>=0.16.5",
    "scikit-image>=0.16.2",
    "scipy>=1.3.2",
    "setuptools",
    "six>=1.15.0",
    "statsmodels>=0.10.2",
    "tqdm>=4.48.0",
]

[project.scripts]
moseq2-model = "moseq2_model.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
